# jlens_nonlingual

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: othello_evo2_jlens.md  othello_jlens_reference.md  othello_precoffee_results.md  precoffee_othello_workspace.md
docs/othello_precoffee_post_assets/: README.md
experiments/2026-07-11_15-14-othello-workspace-closure/: .gitignore  config.json  experiment.py  report.md  run_all.py
scripts/: analyze_othello_workspace_split.py  estimate_jlens_cost.py  eval_othello_jlens.py  eval_othello_legality.py  fit_othello_jlens.py  intervene_othello_jspace.py  othello_common.py  precoffee_common.py  run_othello_coffee_demo.py  run_othello_precoffee.py  summarize_othello_precoffee.py
tests/: conftest.py  test_jspace_projection.py  test_othello_helpers.py  test_othello_intervention.py  test_othello_legality.py  test_precoffee_common.py  test_transformer_lens_adapter.py
